itexams.com/q5/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
        name: allow-port-from-namespace
        namespace: fubar
spec:
        podSelector: {}
        policyTypes:
                - Ingress
        ingress:
                - from:
                        - namespaceSelector:
                                matchLabels:
                                        project: my-app
                  ports:
                        - protocol: TCP
                          port: 9000
